feat: implement 'Move to next day' drag & drop for tasks

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -47,7 +47,8 @@
     "tasksCount_one": "{{count}} task",
     "tasksCount_other": "{{count}} tasks",
     "completedCount_one": "{{count}} completed",
-    "completedCount_other": "{{count}} completed"
+    "completedCount_other": "{{count}} completed",
+    "moveToNextDay": "Move to next day"
   },
   "filter": {
     "all": "All",
