feat: track and display original date after task rescheduling

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -48,7 +48,8 @@
     "tasksCount_other": "{{count}} tasks",
     "completedCount_one": "{{count}} completed",
     "completedCount_other": "{{count}} completed",
-    "moveToNextDay": "Move to next day"
+    "moveToNextDay": "Move to next day",
+    "movedFrom": "Moved from {{date}}"
   },
   "filter": {
     "all": "All",
