feat: implement settings modal with theme and language selection

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -78,7 +78,17 @@
     "agenda": "Agenda"
   },
   "settings": {
+    "title": "Settings",
     "language": "Language",
-    "theme": "Theme"
+    "theme": "Theme",
+    "themes": {
+      "light": "Light",
+      "dark": "Dark",
+      "system": "System"
+    },
+    "languages": {
+      "en": "English",
+      "ru": "Russian"
+    }
   }
 }
