feat(calendar): implement task drag and drop to any calendar day with highlighting and auto-jump setting

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -89,6 +89,7 @@
     "languages": {
       "en": "English",
       "ru": "Russian"
-    }
+    },
+    "jumpToDateAfterMove": "Jump to task date after move"
   }
 }
