--- a/src/renderer/src/i18n/locales/ru.json
+++ b/src/renderer/src/i18n/locales/ru.json
@@ -91,6 +91,7 @@
     "languages": {
       "en": "English",
       "ru": "Русский"
-    }
+    },
+    "jumpToDateAfterMove": "Переходить к дате задачи при перемещении"
   }
 }
