style(i18n): refine wording for navigate to date setting in English

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -90,6 +90,6 @@
       "en": "English",
       "ru": "Russian"
     },
-    "jumpToDateAfterMove": "Jump to task date after move"
+    "jumpToDateAfterMove": "Navigate to task date after move"
   }
 }
