fix: add error handling for auth operations and fallback for user name

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -95,7 +95,8 @@
   },
   "auth": {
     "login": "Sign in with Google",
-    "logout": "Logout"
+    "logout": "Logout",
+    "anonymous": "Anonymous"
   },
   "sync": {
     "synced": "Synced",
