--- a/src/renderer/src/i18n/locales/ru.json
+++ b/src/renderer/src/i18n/locales/ru.json
@@ -97,7 +97,8 @@
   },
   "auth": {
     "login": "Войти через Google",
-    "logout": "Выйти"
+    "logout": "Выйти",
+    "anonymous": "Аноним"
   },
   "sync": {
     "synced": "Синхронизировано",
