style: use full word for russian sync error translation

--- a/src/renderer/src/i18n/locales/ru.json
+++ b/src/renderer/src/i18n/locales/ru.json
@@ -103,6 +103,6 @@
     "synced": "Синхронизировано",
     "syncing": "Синхронизация...",
     "none": "Только локально",
-    "error": "Ошибка синхр."
+    "error": "Ошибка синхронизации"
   }
 }
