style: rename Logout to Sign out for better symmetry

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -94,7 +94,7 @@
   },
   "auth": {
     "login": "Sign in with Google",
-    "logout": "Logout",
+    "logout": "Sign out",
     "anonymous": "Anonymous"
   },
   "sync": {
