feat: add toast notifications for auth errors, handle error sync status

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -95,7 +95,9 @@
   "auth": {
     "login": "Sign in with Google",
     "logout": "Sign out",
-    "anonymous": "Anonymous"
+    "anonymous": "Anonymous",
+    "signInError": "Sign in failed",
+    "logoutError": "Sign out failed"
   },
   "sync": {
     "synced": "Synced",
