--- a/src/renderer/src/i18n/locales/ru.json
+++ b/src/renderer/src/i18n/locales/ru.json
@@ -97,7 +97,9 @@
   "auth": {
     "login": "Войти через Google",
     "logout": "Выйти",
-    "anonymous": "Аноним"
+    "anonymous": "Аноним",
+    "signInError": "Ошибка входа",
+    "logoutError": "Ошибка выхода"
   },
   "sync": {
     "synced": "Синхронизировано",
