--- a/src/renderer/src/i18n/locales/ru.json
+++ b/src/renderer/src/i18n/locales/ru.json
@@ -105,6 +105,8 @@
     "synced": "Синхронизировано",
     "syncing": "Синхронизация...",
     "none": "Только локально",
-    "error": "Ошибка синхронизации"
+    "error": "Ошибка синхронизации",
+    "conflictTitle": "Обнаружены конфликты",
+    "conflictMessage": "{{count}} задач(а/и) не синхронизированы, так как были изменены на другом устройстве. Ваши локальные изменения сохранены."
   }
 }
